# eora1-test

./: .env_example  .gitignore  README.md  docker-compose.yml  pyproject.toml
eora1_test/: bot.py  config.py  loader.py
eora1_test/api/: handlers.py  routes.py
eora1_test/db_api/: db.py
eora1_test/handlers/: __init__.py  common.py  start.py
eora1_test/middlewares/: __init__.py  messages.py
eora1_test/utils/: before_start.py  redis.py
scripts/: docker-entrypoint.sh
