[tool.poetry]
name = "eora1-test"
version = "0.1.0"
description = ""
authors = ["Mikhail Musolin <eddienero@ya.ru>"]
readme = "README.md"
packages = [{include = "eora1_test"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.23.1"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
